tests/ui/const-generics/generic_const_parameter_types/check-type-in-mir.stderr
warning: the feature `unsized_const_params` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/check-type-in-mir.rs:3:12
   |
LL | #![feature(unsized_const_params, adt_const_params, generic_const_parameter_types)]
   |            ^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #95174 <https://github.com/rust-lang/rust/issues/95174> for more information
   = note: `#[warn(incomplete_features)]` on by default

warning: the feature `generic_const_parameter_types` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/check-type-in-mir.rs:3:52
   |
LL | #![feature(unsized_const_params, adt_const_params, generic_const_parameter_types)]
   |                                                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #137626 <https://github.com/rust-lang/rust/issues/137626> for more information

error: lifetime may not live long enough
  --> $DIR/check-type-in-mir.rs:8:12
   |
LL | fn foo<'a, const N: &'a u32>() {
   |        -- lifetime `'a` defined here
LL |     let b: &'static u32 = N;
   |            ^^^^^^^^^^^^ type annotation requires that `'a` must outlive `'static`

error: aborting due to 1 previous error; 2 warnings emitted

